project('profiling-test')
cmake_minimum_required(VERSION 2.8)

include_directories(${CMAKE_SOURCE_DIR})
add_subdirectory(lib_0)
add_subdirectory(lib_1)
add_subdirectory(lib_2)
add_subdirectory(lib_3)
add_subdirectory(lib_4)
add_subdirectory(lib_5)
add_subdirectory(lib_6)
add_subdirectory(lib_7)
add_subdirectory(lib_8)
add_subdirectory(lib_9)
add_subdirectory(lib_10)
add_subdirectory(lib_11)
add_subdirectory(lib_12)
add_subdirectory(lib_13)
add_subdirectory(lib_14)
add_subdirectory(lib_15)
add_subdirectory(lib_16)
add_subdirectory(lib_17)
add_subdirectory(lib_18)
add_subdirectory(lib_19)
add_subdirectory(lib_20)
add_subdirectory(lib_21)
add_subdirectory(lib_22)
add_subdirectory(lib_23)
add_subdirectory(lib_24)
add_subdirectory(lib_25)
add_subdirectory(lib_26)
add_subdirectory(lib_27)
add_subdirectory(lib_28)
add_subdirectory(lib_29)
add_subdirectory(lib_30)
add_subdirectory(lib_31)
add_subdirectory(lib_32)
add_subdirectory(lib_33)
add_subdirectory(lib_34)
add_subdirectory(lib_35)
add_subdirectory(lib_36)
add_subdirectory(lib_37)
add_subdirectory(lib_38)
add_subdirectory(lib_39)
add_subdirectory(lib_40)
add_subdirectory(lib_41)
add_subdirectory(lib_42)
add_subdirectory(lib_43)
add_subdirectory(lib_44)
add_subdirectory(lib_45)
add_subdirectory(lib_46)
add_subdirectory(lib_47)
add_subdirectory(lib_48)
add_subdirectory(lib_49)
add_subdirectory(lib_50)
add_subdirectory(lib_51)
add_subdirectory(lib_52)
add_subdirectory(lib_53)
add_subdirectory(lib_54)
add_subdirectory(lib_55)
add_subdirectory(lib_56)
add_subdirectory(lib_57)
add_subdirectory(lib_58)
add_subdirectory(lib_59)
add_subdirectory(lib_60)
add_subdirectory(lib_61)
add_subdirectory(lib_62)
add_subdirectory(lib_63)
add_subdirectory(lib_64)
add_subdirectory(lib_65)
add_subdirectory(lib_66)
add_subdirectory(lib_67)
add_subdirectory(lib_68)
add_subdirectory(lib_69)
add_subdirectory(lib_70)
add_subdirectory(lib_71)
add_subdirectory(lib_72)
add_subdirectory(lib_73)
add_subdirectory(lib_74)
add_subdirectory(lib_75)
add_subdirectory(lib_76)
add_subdirectory(lib_77)
add_subdirectory(lib_78)
add_subdirectory(lib_79)
add_subdirectory(lib_80)
add_subdirectory(lib_81)
add_subdirectory(lib_82)
add_subdirectory(lib_83)
add_subdirectory(lib_84)
add_subdirectory(lib_85)
add_subdirectory(lib_86)
add_subdirectory(lib_87)
add_subdirectory(lib_88)
add_subdirectory(lib_89)
add_subdirectory(lib_90)
add_subdirectory(lib_91)
add_subdirectory(lib_92)
add_subdirectory(lib_93)
add_subdirectory(lib_94)
add_subdirectory(lib_95)
add_subdirectory(lib_96)
add_subdirectory(lib_97)
add_subdirectory(lib_98)
add_subdirectory(lib_99)
